[gd_scene load_steps=8 format=3 uid="uid://dhm38o7jj6u2q"]

[ext_resource type="Texture2D" uid="uid://bg27k5sblx533" path="res://art/objects/Door_01.png" id="1_eqcfq"]
[ext_resource type="Script" path="res://interactables/key_door/key_door.gd" id="1_olgni"]

[sub_resource type="Gradient" id="Gradient_0n48i"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_85aab"]
gradient = SubResource("Gradient_0n48i")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4p8lq"]
size = Vector2(89, 141)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r7gca"]
size = Vector2(69, 130)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_ykmum"]
properties/0/path = NodePath(".:is_locked")
properties/0/spawn = true
properties/0/replication_mode = 2

[node name="KeyDoor" type="Node2D"]
script = ExtResource("1_olgni")

[node name="DoorClosed" type="Sprite2D" parent="."]
z_index = -100
position = Vector2(0, -70)
scale = Vector2(0.55, 0.55)
texture = ExtResource("1_eqcfq")

[node name="DoorOpen" type="Sprite2D" parent="."]
visible = false
z_index = -100
position = Vector2(0, -65.5)
scale = Vector2(1.098, 2.037)
texture = SubResource("GradientTexture2D_85aab")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, -70.5)
shape = SubResource("RectangleShape2D_4p8lq")

[node name="Exit" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
position = Vector2(0.5, -65)
shape = SubResource("RectangleShape2D_r7gca")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_ykmum")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Exit" to="." method="_on_exit_body_entered"]
[connection signal="delta_synchronized" from="MultiplayerSynchronizer" to="." method="_on_multiplayer_synchronizer_delta_synchronized"]
